<resources>
    <string name="app_name">PROimuni</string>
    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Cabeçalho de navegação</string>
    <string name="action_settings">Configurações</string>
    <string name="app_slogan">Proteção de quem você ama a um clique de você!</string>
    <string name="app_mensagem_indicacao">é um aplicativo incrível que ajuda no calendário do cartão de vacinação das crianças.\n\nBaixe gratuitamente:</string>
    <string name="app_link_download">https://goo.gl/aXpXcF</string>
    <string name="legenda_action_snackbar">Substitua por sua própria ação</string>
    <string name="button_action_snackbar">Ação</string>
    <string name="open_drawer">Abre gaveta</string>
    <string name="close_drawer">Fecha gaveta</string>
    <string name="menu_usuario">Usuário</string>
    <string name="menu_crianca">Criança</string>
    <string name="menu_cartao">Cartão</string>
    <string name="menu_vacina">Vacinas</string>
    <string name="menu_calendario">Calendário</string>
    <string name="menu_posto">Postos</string>
    <string name="menu_curiosidade">Perguntas frequentes</string>
    <string name="menu_backup_copia">Salvar dados</string>
    <string name="menu_backup_restaura">Recuperar dados</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_compartilhar">Compartilhar App</string>
    <string name="menu_avaliacao">Avaliar App</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_shortcut_cartao">Cartão acesso rápido</string>
    <string name="menu_shortcut_vacina">Vacinas acesso rápido</string>
    <string name="menu_shortcut_calendario">Calendário acesso rápido</string>
    <string name="menu_shortcut_posto">Postos acesso rápido</string>
    <string name="clear">Limpar</string>
    <string name="mensagen_avaliacao_app">Por favor, avalie este aplicativo na Play Store.</string>
    <string name="botao_ok_avaliacao_app"><Data><![CDATA[ <strong>Sim, eu quero!</strong> ]]></Data></string>
    <string name="botao_cancel_avaliacao_app">Depois</string>
    <string name="text_usuario_nome">Usuário</string>
    <string name="hint_usuario_nome">Nome de usuário</string>
    <string name="text_usuario_senha">Senha</string>
    <string name="hint_usuario_senha">Senha de usuário</string>
    <string name="btn_login_lembrar_senha">Esqueceu sua senha?</string>
    <string name="btn_login_google">Entrar com Google</string>
    <string name="btn_login_facebook">Entrar com Facebook</string>
    <string name="btn_login_usuario">Entrar</string>
    <string name="btn_login_fazer_cadastro">Criar Conta</string>
    <string name="text_mostra_senha_toggle">Mostrar</string>
    <string name="text_oculta_senha_toggle">Ocultar</string>
    <string name="text_usuario_titulo">Perfil do usuário</string>
    <string name="text_nome_completo">Nome</string>
    <string name="hint_nome_completo">Informe nome e sobrenome</string>
    <string name="text_usuario_login">Usuário</string>
    <string name="hint_usuario_login">Informe um nome</string>
    <string name="text_usuario_email">E-mail</string>
    <string name="hint_usuario_email">Informe o e-mail</string>
    <string name="hint_cad_usuario_senha">Informe a senha</string>
    <string name="text_usuario_repete_senha">Repete senha</string>
    <string name="hint_text_usuario_repete_senha">Confirme a senha</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_remover">Remover</string>
    <string name="btn_voltar">Voltar</string>
    <string name="text_valida_cadastro">Não foi possível salvar!</string>
    <string name="text_cadastro_sucesso">Salvo com sucesso!</string>
    <string name="erro_text_usuario_existente">Usuário já cadastrado!</string>
    <string name="erro_text_cadastro">Ocorreu um erro ao salvar!</string>
    <string name="erro_text_nome_completo">Informe o nome completo</string>
    <string name="erro_text_usuario">Informe um nome de usuário válido</string>
    <string name="erro_text_email_invalido">Informe um e-mail válido</string>
    <string name="erro_text_senha">Informe a senha</string>
    <string name="erro_text_repeteSenha">Repita a senha</string>
    <string name="erro_text_senhaInvalida">Senhas não coincidem</string>
    <string name="text_login_redes_sociais">Entrar com</string>
    <string name="text_valida_login">Informe o usuário</string>
    <string name="text_valida_senha">Informe a senha</string>
    <string name="text_valida_email">Informe um e-mail válido</string>
    <string name="text_valida_usuario">Nome de usuário ou senha não conferem</string>
    <string name="texto_aviso_cadastro_foto">Adicione uma imagem</string>
    <string name="texto_cadastro_opcao_camera">Obter da Câmera</string>
    <string name="texto_cadastro_opcao_imagens">Obter da Galeria</string>
    <string name="texto_botao_dialogo_cancela">Cancelar</string>
    <string name="texto_botao_dialogo_titulo">Opções de Imagem</string>
    <string name="texto_aviso_permissao_camera">Erro de permissão da câmera</string>
    <string name="texto_aviso_camera_ausente">Nenhuma câmera encontrada neste dispositivo!</string>
    <string name="texto_aviso_erro_processo_imagem">Erro ao carregar imagem, selecione uma imagem menor.</string>
    <string name="texto_aviso_erro_aquisicao_imagem">Nenhuma imagem adquirida.</string>
    <string name="texto_aviso_erro_sistema_desatualizado">Impossível obter imagem, atualize o sistema!</string>
    <string name="some_error">Algum erro ocorreu!</string>
    <string name="api_retry_error"> Por favor, tente novamente!</string>
    <string name="api_default_error">Algo errado aconteceu!</string>
    <string name="connection_error">Conexão com a Internet perdida!</string>
    <string name="texto_erro_excluir">Não foi possível remover!</string>
    <string name="perfil_nome" />
    <string name="perfil_email" />
    <string name="text_sobre_titulo">Sobre o App</string>
    <string name="proj_titulo">Projeto</string>
    <string name="proj_info">O PROIMUNI é produto da dissertação de mestrado do Programa de Pós-graduação em Enfermagem da Universidade Federal do Ceará. \nO objetivo do app é o gerenciamento de vacinas infantis oferecidas na rede pública e privada. \nO app permite gerenciar mais de um cartão, incluir fotos de perfil, registrar as doses das vacinas, receber notificações com lembretes das datas e doses,  ter acesso a informações detalhadas de cada vacina, exportar a carteira de vacinação para PDF e compartilhar seus registros. \nO PROIMUNI disponibiza a função de geolocalizacao para pesquisa de unidades de saúde que ofereçam o serviço de vacinação. \nMatenha seu calendário vacinal em dia. Comece a usufruir do PROIMUNI!</string>
    <string name="tecn_titulo">Tecnologia</string>
    <string name="tecn_info">Desenvolvido em plataforma nativa Android, compatível com dispositivos que utilizam Android entre versão 4.0.3 IceCreamSandwich (API 15) e versão 8.1 Oreo (API 27). Utiliza linguagem de programação Java 8. Implementa arquitetura MVP na codificação das regras de negócio, aplica frameworks Dagger 2 para injeção de dependência e Realm 3 para persistência dos dados.</string>
    <string name="cont_titulo">Contato ou Suporte técnico</string>
    <string name="cont_info">proimuni@gmail.com</string>
    <string name="auto_titulo">Desenvolvedor</string>
    <string name="auto_info">Erivando Sena \nerivandoramos@bol.com.br</string>
    <string name="vers_titulo">Versão</string>
    <string name="vers_info">1.0.0</string>
    <string name="facebook_app_id">955393904655704</string>
    <string name="facebook_login_protocol_scheme">fb955393904655704</string>
    <string name="api_erro_login">A operação foi cancelada</string>
    <string name="facebook_error_fabebook_login">Ocorreu um erro ao entrar</string>
    <string name="firebase_logout">Fechar Sessão</string>
    <string name="google_falha_conexao">Conexão falhou!</string>
    <string name="google_error_login">Ocorreu um erro ao entrar</string>
    <string name="google_notlogout">Sessão não encerrada</string>
    <string name="google_notrevoke">Sessão não revogada</string>
    <string name="google_logout">Fechar Sessão</string>
    <string name="erro_request">Requisição cancelada.</string>
    <string name="erro_google_oauth">Erro ao processar informações da API</string>
    <string name="envio_senha_email">Verifique sua caixa de entrada.</string>
    <string name="envio_senha">Senha enviada para o e-mail:</string>
    <string name="resultado_google_oauth">Nenhum resultado retornado.</string>
    <string name="texto_envio_senha">Segue senha solicitada:</string>
    <string name="texto_envio_anexo">Olá! Segue anexo, cópia dos dados do aplicativo enviado por:</string>
    <string name="texto_email_senha">Olá!</string>
    <string name="texto_email_assunto">Senha de usuário</string>
    <string name="texto_email_anexo_backup">Backup do aplicativo</string>
    <string name="text_btn_ok">OK</string>
    <string name="aviso_sem_internet">Sem conexão com à Internet!</string>
    <string name="aviso_play_services_install">Este aplicativo requer o Google Play Services. Por favor instale o Google Play Services no seu dispositivo e tente novamente.</string>
    <string name="hint_nome_crianca">Informe o nome</string>
    <string name="text_nascimento">Nascimento</string>
    <string name="hint_text_nascimento">Informe data de Nascimento</string>
    <string name="text_nome_responsavel">Responsável</string>
    <string name="text_sexo">Gênero</string>
    <string name="erro_text_data">Informe uma data válida</string>
    <string name="erro_text_idade_incompativel">A data informada não é de uma criança! Informe outra.</string>
    <string name="text_crianca_titulo">Perfil da criança</string>
    <string name="text_crianca_add">Adicionar criança</string>
    <string name="text_cartao_titulo">Cartão de vacina</string>
    <string name="text_valida_sexo">Informe o sexo</string>
    <string name="text_valida_crianca">Informe uma criança</string>
    <string name="text_crianca">Criança</string>
    <string name="text_vacina">Vacina</string>
    <string name="hint_text_vacina">Nome da vacina</string>
    <string name="texto_aviso_usuario_nao_cadastrado">É necessário cadastrar o usuário!</string>
    <string name="texto_aviso_crianca_nao_cadastrada">É necessário cadastrar uma crianca!</string>
    <string name="texto_aviso_cartao_nao_cadastrado">É necessário cadastrar um cartão!</string>
    <string name="texto_aviso_crianca_cartao_cadastrada">Criança já possui cartão!</string>
    <string name="text_lista_crianca_titulo">Selecione a criança</string>
    <string name="text_lista_cartao_titulo">Selecione o cartão</string>
    <string name="text_lista_calendario_titulo">Calendário Vacinal</string>
    <string name="texto_aviso_remove_crianca">\nCriança removida!\n</string>
    <string name="texto_aviso_cadastra_cartao">\nGerando o cartão da criança…\n</string>
    <string name="texto_aviso_atualiza_cartao">\nAtualizando dados no cartão…\n</string>
    <string name="texto_aviso_removendo_cartao">\nRemovendo cartão da crianca…\n</string>
    <string name="aviso_vacina_nao_encontrada">Vacina não localizada!</string>
    <string name="title_tab1">Rede Pública</string>
    <string name="title_tab2">Rede Privada</string>
    <string name="text_vacinas_titulo">Vacinas</string>
    <string name="vacina_descricao">Descrição</string>
    <string name="vacina_administracao">Local de administração</string>
    <string name="vacina_doses">Doses</string>
    <string name="vacina_faixa">Faixa etária</string>
    <string name="vacina_contraindicacoes">Contraindicações</string>
    <string name="vacina_fonte">Fonte</string>
</resources>