<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright [2018] [Erivando Sena]
~
~ Licenciado sob a Licença Apache, Versão 2.0 (a "Licença");
~ você não pode usar este arquivo, exceto em conformidade com a Licença.
~ Você pode obter uma cópia da Licença em
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ A menos que exigido pela lei aplicável ou acordado por escrito, o software
~ distribuído sob a Licença é distribuído em uma base "COMO ESTÁ",
~ SEM GARANTIAS OU CONDIÇÕES DE QUALQUER TIPO, expressas ou implícitas.
~ Veja a Licença para o idioma específico que governa as permissões e
~ limitações sob a licença.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_usuario"
            android:checked="true"
            android:icon="@drawable/ic_usuario"
            android:title="@string/menu_usuario" />

        <item
            android:id="@+id/nav_item_crianca"
            android:checked="true"
            android:icon="@drawable/ic_crianca"
            android:title="@string/menu_crianca" />

        <!--
        <item
            android:id="@+id/nav_item_curiosidade"
            android:checked="true"
            android:icon="@drawable/ic_curiosidades"
            android:title="@string/menu_curiosidade" />
        -->

        <item
            android:id="@+id/nav_item_backup"
            android:checked="true"
            android:icon="@drawable/ic_app_backup"
            android:title="@string/menu_backup_copia" />

        <item
            android:id="@+id/nav_item_restauracao"
            android:checked="true"
            android:icon="@drawable/ic_cloud_restore"
            android:title="@string/menu_backup_restaura" />

        <item
            android:id="@+id/nav_item_configuracao"
            android:checked="true"
            android:icon="@drawable/ic_configuracao"
            android:title="@string/menu_config" />

        <item
            android:id="@+id/nav_item_compartilhar"
            android:checked="true"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_compartilhar" />

        <item
            android:id="@+id/nav_item_avaliacao"
            android:checked="true"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_avaliacao" />

        <item
            android:id="@+id/nav_item_sobre"
            android:checked="true"
            android:icon="@drawable/ic_sobre"
            android:title="@string/text_sobre_titulo" />

        <item
            android:id="@+id/nav_item_logout"
            android:checked="true"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>