<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright [2018] [Erivando Sena]
~
~ Licenciado sob a Licença Apache, Versão 2.0 (a "Licença");
~ você não pode usar este arquivo, exceto em conformidade com a Licença.
~ Você pode obter uma cópia da Licença em
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ A menos que exigido pela lei aplicável ou acordado por escrito, o software
~ distribuído sob a Licença é distribuído em uma base "COMO ESTÁ",
~ SEM GARANTIAS OU CONDIÇÕES DE QUALQUER TIPO, expressas ou implícitas.
~ Veja a Licença para o idioma específico que governa as permissões e
~ limitações sob a licença.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/ic_proimuni_logo_branco"
                android:contentDescription="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColorGrey"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_usua_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_usuario_nome"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColorGrey"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/textColorGrey">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_usua_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_usuario_senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/btn_login_usuario"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/botao_interativo"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btn_login_usuario"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_btn_lembrar_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|start"
                    android:autoLink="web"
                    android:clickable="true"
                    android:linksClickable="true"
                    android:text="@string/btn_login_lembrar_senha"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/textColorGrey"
                    android:textColorLink="@color/textColorWhite" />


                <TextView
                    android:id="@+id/btn_cadastro_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|end"
                    android:layout_marginTop="-22dp"
                    android:autoLink="web"
                    android:clickable="true"
                    android:linksClickable="true"
                    android:text="@string/btn_login_fazer_cadastro"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/textColorGrey"
                    android:textColorLink="@color/textColorWhite" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_google_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/botao_interativo"
                android:drawableLeft="@drawable/ic_btn_google"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btn_login_google"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/botao_interativo"
                android:drawableLeft="@drawable/ic_btn_facebook"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btn_login_facebook"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>