<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright [2018] [Erivando Sena]
~
~ Licenciado sob a Licença Apache, Versão 2.0 (a "Licença");
~ você não pode usar este arquivo, exceto em conformidade com a Licença.
~ Você pode obter uma cópia da Licença em
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ A menos que exigido pela lei aplicável ou acordado por escrito, o software
~ distribuído sob a Licença é distribuído em uma base "COMO ESTÁ",
~ SEM GARANTIAS OU CONDIÇÕES DE QUALQUER TIPO, expressas ou implícitas.
~ Veja a Licença para o idioma específico que governa as permissões e
~ limitações sob a licença.
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/content_toobar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <br.com.erivando.proimuni.imagem.RoundedImageButton
                android:id="@+id/img_usuario_foto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorTransparent"
                android:contentDescription="@null"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher_round"
                android:tint="@android:color/transparent"
                app:layout_collapseMode="parallax" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/textColorGray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_cad_nome"
                    style="@style/TextStyle.EditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_nome_completo"
                    android:inputType="textAutoComplete"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/textColorGray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_cad_login"
                    style="@style/TextStyle.EditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_usuario_login"
                    android:inputType="text"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/textColorGray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_cad_email"
                    style="@style/TextStyle.EditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_usuario_email"
                    android:inputType="textAutoComplete"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="@color/textColorGray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_cad_senha"
                    style="@style/TextStyle.EditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_usuario_senha"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/textColorGray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_cad_repete_senha"
                    style="@style/TextStyle.EditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_usuario_repete_senha"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_cadadastar_usuario"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/botao_padrao"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btn_salvar"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>